# expenses-bot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  integration-tests-setup.yml  test.env
.github/workflows/: main_flow.yml
docker-compose/: .env  .env.prod  .env.test  app-setup.yml  docker-compose.yml  integration-tests-setup.yml
migrations/2021-01-02-114437_initial_schema/: down.sql  up.sql
migrations/2021-07-11-051653_update-history/: up.sql
src/: lib.rs  main.rs
src/bot/: api.rs  commands.rs  error.rs  mod.rs
src/bot/dialogs/: add.rs  entity.rs  feedback.rs  history.rs  mod.rs  start.rs
src/db/: mod.rs  schema.rs
src/db/models/: dialog.rs  history.rs  mod.rs  user.rs
src/log/: logger.rs
src/store/: error.rs  history.rs  mod.rs  simple_store.rs
src/telegram/: client.rs  error.rs  mod.rs  test_helpers.rs  types.rs
tests/: api_integration_test.rs  cucumber.rs  tests.rs
tests/bot/: api_integration_test.rs
tests/db/model/: dialog.rs  history.rs  test_helper.rs  user.rs
tests/features/: help_command.feature  test.feature
