[package]
name = "expenses"
version = "0.1.0"
authors = ["Artem Privalov <privalov.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
dotenv = "0.15"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.8", features = ["json"] }
log = "0.4.11"
env_logger = "0.7.1"
postgres = "0.19.0"
r2d2 = "0.8.9"
strum = "0.18.0"
strum_macros = "0.18.0"
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
tokio-core = "0.1.17"
chrono = "0.4"

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.7.0" }
fake = "2"
mockito = "0.27.0"
serial_test = "0.5.0"


[[test]]
name = "cucumber"
harness = false
